--- a/vmc/platformio_override.ini
+++ b/vmc/platformio_override.ini
@@ -8,64 +8,103 @@
 ; Please visit documentation for the options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-; VMC for devices with 1M esp8266 (sonoff basic, ...)
-[env:tasmota-vmc]
-build_flags            = ${common.build_flags}
+; Sensor for 1M esp8266
+[env:tasmota-sensor]
+build_flags             = ${common.build_flags} -DUSE_GENERIC_SENSOR_GUI
+board_build.f_cpu       = 80000000L
 
-; VMC with 64k LittleFS partition for devices with 1mb esp8266 (sonoff basic, ...)
-[env:tasmota-vmc-1m64k]
-build_flags            = ${common.build_flags} -DBUILD_1M64K -DUSE_UFILESYS -DGUI_EDIT_FILE -DGUI_TRASH_FILE
-board                  = esp8266_1M
-board_build.ldscript   = eagle.flash.1m64.ld
-board_build.filesystem = littlefs
-
-; VMC with 2mb LittleFS partition for devices with 4mb esp8266 (wemos mini, ...)
-[env:tasmota-vmc-4m2m]
-build_flags            = ${common.build_flags} -DBUILD_4M2M 
+; Sensor with 2mb LittleFS partition for 4mb esp8266 (wemos mini, ...)
+[env:tasmota-sensor-4m2m]
+build_flags            = ${common.build_flags} -DUSE_GENERIC_SENSOR_GUI -DBUILD_4M2M 
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
+board_build.f_cpu      = 80000000L
+
+[env:tasmota32-sensor]
+extends                = env:tasmota32 
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M
+board                  = esp32_4M_FS
+board_build.filesystem = littlefs
+board_build.f_cpu      = 160000000L
+
+; VMC for devices with 1M esp8266 (sonoff basic, ...)
+[env:tasmota-vmc]
+build_flags            = ${common.build_flags} -DUSE_VMC
+board_build.f_cpu      = 80000000L
+
+; VMC with 2mb LittleFS partition for 4mb esp8266 (wemos mini, ...)
+[env:tasmota-vmc-4m2m]
+build_flags            = ${common.build_flags} -DUSE_VMC -DBUILD_4M2M 
+board                  = esp8266_4M2M
+board_build.ldscript   = eagle.flash.4m2m.ld
+board_build.filesystem = littlefs
+board_build.f_cpu      = 80000000L
 
 [platformio]
 ; For best Gitpod performance remove the ";" in the next line. Needed Platformio files are cached and installed at first run
 ;core_dir = .platformio
-extra_configs           = platformio_tasmota_cenv.ini
+; For unrelated compile errors with Windows it can help to shorten Platformio project path
+;workspace_dir = c:\.pio
+;extra_configs           = platformio_tasmota_user_env.ini
 
 ; *** Build/upload environment
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
+                           tasmota-sensor
+                           tasmota-sensor-4m2m
+                           tasmota32-sensor
                            tasmota-vmc
-                           tasmota-vmc-1m64k
                            tasmota-vmc-4m2m
+;                          tasmota
+;                          tasmota-debug
+;                          tasmota-minimal
+;                          tasmota-lite
+;                          tasmota-knx
+;                          tasmota-sensors
+;                          tasmota-display
+;                          tasmota-zbbridge
+;                          tasmota-ir
+;                          tasmota32
+;                          tasmota32-zbbrdgpro
+;                          tasmota32-bluetooth
+;                          tasmota32-webcam
+;                          tasmota32-knx
+;                          tasmota32-lvgl
+;                          tasmota32-ir
+;                          tasmota32solo1
+;                          tasmota32c3
+;                          tasmota32c3cdc
+;                          tasmota32s2
+;                          tasmota32s2cdc
+;                          tasmota32s3
+;                          tasmota32s3cdc
+;                          tasmota32-odroidgo
+;                          tasmota32-core2
+;                          tasmota32-nspanel
+
 
 [env]
-framework               = ${common.framework}
-platform                = ${common.platform}
-platform_packages       = ${common.platform_packages}
+;build_unflags           = ${common.build_unflags}
+;                          -Wswitch-unreachable
+;build_flags             = ${common.build_flags}
+;                          -DF_CRYSTAL=26000000
+;                          -Wno-switch-unreachable
+; *** Optional Debug messages
+;                         -DDEBUG_TASMOTA_CORE
+;                         -DDEBUG_TASMOTA_DRIVER
+;                         -DDEBUG_TASMOTA_SENSOR
 ; Build variant 1MB = 1MB firmware no filesystem (default)
-board                   = ${common.board}
+;board                   = ${common.board}
 ; Build variant 2MB = 1MB firmware, 1MB filesystem (most Shelly devices)
 ;board                   = esp8266_2M1M
 ; Build variant 4MB = 1MB firmware, 1MB OTA, 2MB filesystem (WEMOS D1 Mini, NodeMCU, Sonoff POW)
 ;board                   = esp8266_4M2M
 ;board_build.f_cpu       = 160000000L
 ;board_build.f_flash     = 40000000L
-board_build.filesystem  = ${common.board_build.filesystem}
-build_unflags           = ${common.build_unflags}
-build_flags             = ${common.build_flags}
-; *** Optional Debug messages
-;                         -DDEBUG_TASMOTA_CORE
-;                         -DDEBUG_TASMOTA_DRIVER
-;                         -DDEBUG_TASMOTA_SENSOR
-monitor_speed           = ${common.monitor_speed}
-; *** Serial port used for erasing/flashing the ESP82xx
-;upload_port             = ${common.upload_port}
-upload_port             = COM5
-upload_resetmethod      = ${common.upload_resetmethod}
-extra_scripts           = ${scripts_defaults.extra_scripts}
-;                          pio-tools/obj-dump.py
-lib_ldf_mode            = ${common.lib_ldf_mode}
-lib_compat_mode         = ${common.lib_compat_mode}
+; *** Define serial port used for erasing/flashing/terminal
+;upload_port             = COM4
+;monitor_port            = COM4
 lib_ignore              =
                           Servo(esp8266)
                           ESP8266AVRISP
@@ -87,29 +126,33 @@ lib_extra_dirs          = ${library.lib_extra_dirs}
 
 
 [env:tasmota32_base]
-framework               = ${common.framework}
-platform                = ${core32.platform}
-platform_packages       = ${core32.platform_packages}
-; Build variant ESP32 4M Flash, Tasmota 1856k Code/OTA, 320k LITTLEFS (default)
-board                   = esp32_4M
-; Build variant ESP32 8M Flash, Tasmota 2944k Code/OTA, 2112k LITTLEFS
-;board                   = esp32_8M
-; Build variant ESP32 16M Flash, Tasmota 2944k Code/OTA, 10M LITTLEFS
-;board                   = esp32_16M
+; *** Uncomment next lines ";" to enable development Tasmota Arduino version ESP32
+;platform                = https://github.com/tasmota/platform-espressif32.git
+;platform_packages       = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1271/framework-arduinoespressif32-lwip_timeout-ed6742e7f0.zip
+;                          framework-arduino-solo1 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1273/framework-arduinoespressif32-solo1-release_v4.4-804d12ce82.zip
+;                          framework-arduino-ITEAD @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1272/framework-arduinoespressif32-ITEAD-release_v4.4-804d12ce82.zip
+;build_unflags           = ${esp32_defaults.build_unflags}
+;build_flags             = ${esp32_defaults.build_flags}
+;board                   = esp32
 ;board_build.f_cpu       = 240000000L
 ;board_build.f_flash     = 40000000L
-monitor_speed           = 115200
+;board_build.flash_mode  = qio
+;board_build.flash_size  = 8MB
+;board_upload.maximum_size = 8388608
+;board_upload.arduino.flash_extra_images =
+;board_build.partitions  = partitions/esp32_partition_app2944k_fs2M.csv
 ; *** Serial port used for erasing/flashing the ESP32
-;upload_port             = ${common.upload_port}
-upload_port             = COM4
+;upload_port             = COM4
+;monitor_port            = COM4
 ;upload_speed            = 115200
+monitor_speed           = 115200
 upload_resetmethod      = ${common.upload_resetmethod}
-extra_scripts           = ${common.extra_scripts}
-build_unflags           = ${esp32_defaults.build_unflags}
-build_flags             = ${esp32_defaults.build_flags}
-lib_ldf_mode            = ${common.lib_ldf_mode}
-lib_compat_mode         = ${common.lib_compat_mode}
 lib_ignore              =
+                          HTTPUpdateServer
+                          ESP RainMaker
+                          WiFiProv
+                          USB
+                          SPIFFS
                           ESP32 Azure IoT Arduino
                           ESP32 Async UDP
                           ESP32 BLE Arduino
@@ -125,11 +168,13 @@ lib_extra_dirs           = ${library.lib_extra_dirs}
 ; *** ESP32 lib. ALWAYS needed for ESP32 !!!
                           lib/libesp32
 ; *** comment the following line if you dont use LVGL in a Tasmota32 build. Reduces compile time
-                          lib/libesp32_lvgl
+;                          lib/libesp32_lvgl
+; *** comment the following line if you dont use ESP32 Audio in a Tasmota32 build. Reduces compile time
+;                          lib/libesp32_audio
 ; *** uncomment the following line if you use Bluetooth or Apple Homekit in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_div
-; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time 
-;                          lib/libesp32_epdiy
+; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
+;                          lib/libesp32_eink
 
 
 [library]
@@ -143,11 +188,11 @@ lib_extra_dirs           =
 ; *** Only disabled for Tasmota minimal and Tasmota light. For all other variants needed!
                            lib/lib_basic
 ; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
-;                           lib/lib_i2c
+                           lib/lib_i2c
 ; *** Displays. Disable if you dont have any Display activated
 ;                           lib/lib_display
 ; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
-;                           lib/lib_ssl
+                           lib/lib_ssl
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
 ;                           lib/lib_audio
 ; *** RF 433 stuff (not RF Bridge). Recommended to disable
