--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -25,17 +25,17 @@ board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
 
-[env:tasmota32-teleinfo]
+[env:tasmota32-teleinfo-4m1300k]
 extends                = env:tasmota32 
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ETHERNET
-board                  = esp32_4M_FS
+board                  = esp32_4M1300k_FS
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
-[env:tasmota32s2-teleinfo] 
+[env:tasmota32s2-teleinfo-4m1300k] 
 extends                = env:tasmota32s2
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2
-board                  = esp32s2
+board                  = esp32s2_4M1300k_FS
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
@@ -59,8 +59,8 @@ default_envs            =
     tasmota-teleinfo
     tasmota-teleinfo-4m2m
     tasmota-teleinfo-16m14m
-    tasmota32-teleinfo
-    tasmota32s2-teleinfo
+    tasmota32-teleinfo-4m1300k
+    tasmota32s2-teleinfo-4m1300k
     tasmota32s3-teleinfo-16m10m
 
 ;                          tasmota
