--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -27,21 +27,21 @@ board_build.f_cpu      = 160000000L
 
 [env:tasmota32-teleinfo-4m1300k]
 extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ETHERNET
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ECOWATT_SERVER -DUSE_ETHERNET
 board                  = esp32_4M1300k_FS
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s2-teleinfo-4m1300k] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_ECOWATT_SERVER 
 board                  = esp32s2_4M1300k_FS
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo-16m10m] 
 extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_ECOWATT_SERVER
 board                  = esp32s3_lillygo_t7s3
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
