--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -9,40 +9,47 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [env:tasmota-teleinfo]
-board_build.f_cpu      = 160000000L
+board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-4m2m]
 build_flags            = ${common.build_flags} -DBUILD_4M2M
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
-board_build.f_cpu      = 160000000L
+board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-16m14m]
 build_flags            = ${common.build_flags} -DBUILD_16M14M
 board                  = esp8266_16M14M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
-board_build.f_cpu      = 160000000L
+board_build.f_cpu      = 80000000L
 
-[env:tasmota32-teleinfo-4m1300k]
+[env:tasmota32-teleinfo-4m1200k]
 extends                = env:tasmota32 
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ECOWATT_SERVER -DUSE_ETHERNET
-board                  = esp32_4M1300k_FS
+board                  = esp32_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
-[env:tasmota32s2-teleinfo-4m1300k] 
+[env:tasmota32s2-teleinfo-4m1200k] 
 extends                = env:tasmota32s2
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_ECOWATT_SERVER 
-board                  = esp32s2_4M1300k_FS
+board                  = esp32s2_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo-16m10m] 
 extends                = env:tasmota32s3
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_ECOWATT_SERVER
-board                  = esp32s3_lillygo_t7s3
+board                  = esp32s3_16M12M-safeboot
+board_build.filesystem = littlefs
+board_build.f_cpu      = 240000000L
+
+[env:tasmota32-teleinfo-denkyd4-8m4m]
+extends                = env:tasmota32 
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_ECOWATT_SERVER
+board                  = denkyd4_8M4M-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
@@ -59,9 +66,10 @@ default_envs            =
     tasmota-teleinfo
     tasmota-teleinfo-4m2m
     tasmota-teleinfo-16m14m
-    tasmota32-teleinfo-4m1300k
-    tasmota32s2-teleinfo-4m1300k
+    tasmota32-teleinfo-4m1200k
+    tasmota32s2-teleinfo-4m1200k
     tasmota32s3-teleinfo-16m10m
+    tasmota32-teleinfo-denkyd4-8m4m
 
 ;                          tasmota
 ;                          tasmota-debug
@@ -197,7 +205,7 @@ lib_extra_dirs           =
 ; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
                            lib/lib_i2c
 ; *** Displays. Disable if you dont have any Display activated
-;                           lib/lib_display
+                           lib/lib_display
 ; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
                            lib/lib_ssl
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
