--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -12,14 +12,14 @@
 board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-4m2m]
-build_flags            = ${common.build_flags} -DBUILD_4M2M
+build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_FTPSERVER
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
 board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-16m14m]
-build_flags            = ${common.build_flags} -DBUILD_16M14M
+build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_FTPSERVER
 board                  = esp8266_16M14M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
@@ -27,28 +27,28 @@ board_build.f_cpu      = 80000000L
 
 [env:tasmota32-teleinfo-4m1200k]
 extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ECOWATT_SERVER -DUSE_ETHERNET
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER -DUSE_ETHERNET
 board                  = esp32_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s2-teleinfo-4m1200k] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_ECOWATT_SERVER 
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER 
 board                  = esp32s2_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo-16m10m] 
 extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_ECOWATT_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER
 board                  = esp32s3_16M12M-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-teleinfo-denkyd4-8m4m]
 extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_ECOWATT_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER
 board                  = denkyd4_8M4M-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
