--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -8,48 +8,86 @@
 ; Please visit documentation for the options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
+[env:tasmota-ticrelay]
+build_flags            = ${common.build_flags} -DUSE_TICRELAY
+
+[env:tasmota32-ticrelay]
+extends                = env:tasmota32 
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TICRELAY
+board                  = esp32_4M1200k
+board_build.filesystem = littlefs
+
+[env:tasmota32c3-ticrelay] 
+extends                = env:tasmota32c3
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TICRELAY
+board                  = esp32c3_4M1200k
+board_build.filesystem = littlefs
+
+
 [env:tasmota-teleinfo]
+build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_DOMOTICZ
 board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-4m2m]
-build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_FTPSERVER
+build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER
+build_unflags          = -DESP8266_4M 
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
 board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-16m14m]
-build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_FTPSERVER
+build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER
 board                  = esp8266_16M14M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
 board_build.f_cpu      = 80000000L
 
-[env:tasmota32-teleinfo-4m1200k]
-extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER -DUSE_ETHERNET
+[env:tasmota32-teleinfo]
+extends                = env:tasmota32
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
-[env:tasmota32s2-teleinfo-4m1200k] 
+[env:tasmota32-denkyd4-teleinfo]
+extends                = env:tasmota32
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+board                  = denkyd4_8M4M-safeboot
+board_build.filesystem = littlefs
+board_build.f_cpu      = 240000000L
+
+[env:tasmota32c3-teleinfo] 
+extends                = env:tasmota32c3
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+board                  = esp32c3_4M1200k
+board_build.filesystem = littlefs
+
+[env:tasmota32c6-winky-teleinfo]
+extends                = env:tasmota32c6-arduino30
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKY -DUSE_TELEINFO -DUSE_TELEINFO_DOMOTICZ -DUSE_WINKY
+board                  = esp32c6_4M1200k-safeboot
+board_build.filesystem = littlefs
+board_build.f_cpu      = 80000000L
+
+[env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER 
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32s2_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
-[env:tasmota32s3-teleinfo-16m10m] 
-extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER
-board                  = esp32s3_16M12M-safeboot
+[env:tasmota32s3-teleinfo] 
+extends                = env:tasmota32s3-arduino30
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+board                  = esp32s3_4M1200k-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
-[env:tasmota32-teleinfo-denkyd4-8m4m]
-extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_FTPSERVER -DUSE_ECOWATT_SERVER
-board                  = denkyd4_8M4M-safeboot
+[env:tasmota32s3-teleinfo-16m12m] 
+extends                = env:tasmota32s3-arduino30
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+board                  = esp32s3_16M12M-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
@@ -63,13 +101,33 @@ board_build.f_cpu      = 240000000L
 ; *** Build/upload environment
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
+
+;    tasmota-ticrelay
+;    tasmota32-ticrelay
+;    tasmota32c3-ticrelay
+
     tasmota-teleinfo
     tasmota-teleinfo-4m2m
     tasmota-teleinfo-16m14m
-    tasmota32-teleinfo-4m1200k
-    tasmota32s2-teleinfo-4m1200k
-    tasmota32s3-teleinfo-16m10m
-    tasmota32-teleinfo-denkyd4-8m4m
+
+    tasmota32-safeboot
+    tasmota32-teleinfo
+    tasmota32-denkyd4-teleinfo
+
+    tasmota32c3-safeboot
+    tasmota32c3-teleinfo
+
+    tasmota32c6-safeboot
+   tasmota32c6-winky-teleinfo
+
+    tasmota32s2-safeboot
+    tasmota32s2-teleinfo
+
+    tasmota32s3cdc-safeboot
+    tasmota32s3-teleinfo
+    tasmota32s3-teleinfo-16m12m
+
+
 
 ;                          tasmota
 ;                          tasmota-debug
@@ -97,7 +155,7 @@ default_envs            =
 ;                          tasmota32-odroidgo
 ;                          tasmota32-core2
 ;                          tasmota32-nspanel
-
+;                           tasmota32c6-safeboot
 
 [env]
 ;build_unflags           = ${common.build_unflags}
