--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -23,13 +23,12 @@ build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE
 board                  = esp32c3_4M1200k
 board_build.filesystem = littlefs
 
-
 [env:tasmota-teleinfo]
-build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_DOMOTICZ
+build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE
 board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-4m2m]
-build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER
+build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER
 build_unflags          = -DESP8266_4M 
 board                  = esp8266_4M2M
 board_build.ldscript   = eagle.flash.4m2m.ld
@@ -37,7 +36,7 @@ board_build.filesystem = littlefs
 board_build.f_cpu      = 80000000L
 
 [env:tasmota-teleinfo-16m14m]
-build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER
+build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER
 board                  = esp8266_16M14M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
@@ -45,48 +44,48 @@ board_build.f_cpu      = 80000000L
 
 [env:tasmota32-teleinfo]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-denkyd4-teleinfo]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = denkyd4_8M4M-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32c3-teleinfo] 
 extends                = env:tasmota32c3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32c3_4M1200k
 board_build.filesystem = littlefs
 
 [env:tasmota32c6-winky-teleinfo]
 extends                = env:tasmota32c6-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKY -DUSE_TELEINFO -DUSE_TELEINFO_DOMOTICZ -DUSE_WINKY
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKY -DUSE_TELEINFO -DUSE_WINKY
 board                  = esp32c6_4M1200k-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 80000000L
 
 [env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32s2_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo] 
 extends                = env:tasmota32s3-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32s3_4M1200k-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo-16m12m] 
 extends                = env:tasmota32s3-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_TELEINFO_DOMOTICZ -DUSE_FTPSERVER -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32s3_16M12M-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
@@ -110,20 +109,20 @@ default_envs            =
     tasmota-teleinfo-4m2m
     tasmota-teleinfo-16m14m
 
-    tasmota32-safeboot
+;    tasmota32-safeboot
     tasmota32-teleinfo
     tasmota32-denkyd4-teleinfo
 
-    tasmota32c3-safeboot
+;    tasmota32c3-safeboot
     tasmota32c3-teleinfo
 
-    tasmota32c6-safeboot
-   tasmota32c6-winky-teleinfo
+;    tasmota32c6-safeboot
+    tasmota32c6-winky-teleinfo
 
-    tasmota32s2-safeboot
+;    tasmota32s2-safeboot
     tasmota32s2-teleinfo
 
-    tasmota32s3cdc-safeboot
+;    tasmota32s3cdc-safeboot
     tasmota32s3-teleinfo
     tasmota32s3-teleinfo-16m12m
 
