--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -43,34 +43,42 @@ board_build.filesystem = littlefs
 board_build.f_cpu      = 80000000L
 
 [env:tasmota32-teleinfo]
-extends                = env:tasmota32
+extends                = env:tasmota32-arduino30
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32_4M1200k
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
-[env:tasmota32-denkyd4-teleinfo]
-extends                = env:tasmota32
+[env:tasmota32-teleinfo-ethernet]
+extends                = env:tasmota32-arduino30
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER -DUSE_ETHERNET
+board                  = esp32_4M1200k
+board_build.filesystem = littlefs
+board_build.f_cpu      = 240000000L
+
+[env:tasmota32-teleinfo-denkyd4]
+extends                = env:tasmota32-arduino30
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = denkyd4_8M4M-safeboot
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32c3-teleinfo] 
-extends                = env:tasmota32c3
+extends                = env:tasmota32c3-arduino30
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32c3_4M1200k
 board_build.filesystem = littlefs
 
-[env:tasmota32c6-winky-teleinfo]
+[env:tasmota32c6-teleinfo-winky]
 extends                = env:tasmota32c6-arduino30
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKY -DUSE_TELEINFO -DUSE_WINKY
-board                  = esp32c6_4M1200k-safeboot
+;board                  = esp32c6_4M1200k-safeboot
+board                  = esp32c6
 board_build.filesystem = littlefs
-board_build.f_cpu      = 80000000L
+;board_build.f_cpu      = 80000000L
 
 [env:tasmota32s2-teleinfo] 
-extends                = env:tasmota32s2
+extends                = env:tasmota32s2-arduino30
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
 board                  = esp32s2_4M1200k
 board_build.filesystem = littlefs
@@ -109,23 +117,23 @@ default_envs            =
     tasmota-teleinfo-4m2m
     tasmota-teleinfo-16m14m
 
-;    tasmota32-safeboot
+    tasmota32-safeboot
     tasmota32-teleinfo
-    tasmota32-denkyd4-teleinfo
+    tasmota32-teleinfo-ethernet
+    tasmota32-teleinfo-denkyd4
 
-;    tasmota32c3-safeboot
+    tasmota32c3-safeboot
     tasmota32c3-teleinfo
 
-;    tasmota32c6-safeboot
-    tasmota32c6-winky-teleinfo
+    tasmota32c6-safeboot
+    tasmota32c6-teleinfo-winky
 
-;    tasmota32s2-safeboot
+    tasmota32s2-safeboot
     tasmota32s2-teleinfo
 
-;    tasmota32s3cdc-safeboot
+    tasmota32s3cdc-safeboot
     tasmota32s3-teleinfo
     tasmota32s3-teleinfo-16m12m
-
 
 
 ;                          tasmota
