--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -72,10 +72,9 @@ board_build.filesystem = littlefs
 [env:tasmota32c6-teleinfo-winky]
 extends                = env:tasmota32c6-arduino30
 build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKY -DUSE_TELEINFO -DUSE_WINKY
-;board                  = esp32c6_4M1200k-safeboot
-board                  = esp32c6
+board                  = esp32c6_winky
 board_build.filesystem = littlefs
-;board_build.f_cpu      = 80000000L
+board_build.f_cpu      = 160000000L
 
 [env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2-arduino30
@@ -117,22 +116,22 @@ default_envs            =
     tasmota-teleinfo-4m2m
     tasmota-teleinfo-16m14m
 
-    tasmota32-safeboot
+;    tasmota32-safeboot
     tasmota32-teleinfo
     tasmota32-teleinfo-ethernet
     tasmota32-teleinfo-denkyd4
 
-    tasmota32c3-safeboot
+;    tasmota32c3-safeboot
     tasmota32c3-teleinfo
 
-    tasmota32c6-safeboot
+;    tasmota32c6-safeboot
     tasmota32c6-teleinfo-winky
 
-    tasmota32s2-safeboot
+;    tasmota32s2-safeboot
     tasmota32s2-teleinfo
 
-    tasmota32s3cdc-safeboot
-    tasmota32s3-teleinfo
+;    tasmota32s3cdc-safeboot
+;    tasmota32s3-teleinfo
     tasmota32s3-teleinfo-16m12m
 
 
